# hdf5filters

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  build  demo.c
bitshuffle/: CMakeLists.txt  bitshuffle_core.h  bitshuffle_internals.h
cmake/: FindBlosc.cmake
configure/: RELEASE
h5lzfilter/: CMakeLists.txt
hdf5-blosc/: CMakeLists.txt
lz4/: CMakeLists.txt
